--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -38,7 +38,6 @@
   --text-primary-color: #{$oc-gray-8};
 
   --color-primary: #6965db;
-  --color-primary-chubb: #625ee0; // to offset Chubb illusion
   --color-primary-darker: #5b57d1;
   --color-primary-darkest: #4a47b1;
   --color-primary-light: #e2e1fc;
@@ -85,7 +84,6 @@
     --text-primary-color: #{$oc-gray-4};
 
     --color-primary: #5650f0;
-    --color-primary-chubb: #726dff; // to offset Chubb illusion
     --color-primary-darker: #4b46d8;
     --color-primary-darkest: #3e39be;
     --color-primary-light: #3f3d64;
