--- a/src/packages/excalidraw/example/App.scss
+++ b/src/packages/excalidraw/example/App.scss
@@ -40,3 +40,10 @@
     display: flex;
   }
 }
+
+.excalidraw {
+  --color-primary: #faa2c1;
+  --color-primary-darker: #f783ac;
+  --color-primary-darkest: #e64980;
+  --color-primary-light: #fcc2d7;
+}
